fix(Blossom): make time visible (#944)

--- a/Blossom/user.css
+++ b/Blossom/user.css
@@ -137,16 +137,18 @@
 }
 
 .playback-bar {
-    width: 102vw;
-    left: -25px;
-    bottom: 67px;
-    position: relative;
-    cursor: pointer;
-}
-.main-playbackBarRemainingTime-container {
+    width: calc(100% + 82px);
+    left: -41px;
+    bottom: 74px;
     position: absolute;
-    visibility: hidden;
+    cursor: pointer;
+    transition: all 0.5s;
 }
+.playback-bar:hover {
+    width: 100%;
+    left: 0;
+}
+
 .progress-bar {
 	--fg-color: var(--spice-button-active);
 }
@@ -161,7 +163,7 @@
 }
 
 .player-controls__buttons {
-    transform: translateY(15px);
+    margin-bottom: 0;
 }
 
 .main-playPauseButton-button {
